--- a/style.css
+++ b/style.css
@@ -10,42 +10,74 @@ body {
 
 header {
   margin: 0 auto;
-  padding: 30px;
+  padding: 5px;
   text-align: center;
 }
 
 .title-header {
   font-size: 2.7rem;
+  color: #8f8989;
 }
 
 .title-content {
   font-size: 1.4rem;
+  color: #8f8989;
 }
 
 .form-section {
   margin: 0 auto;
-  padding: 30px;
+  padding: 5px;
+  text-align: center;
 }
 
 .form-group {
-
+  font-size: 1.4rem;
 }
 
 label {
-
+  color: #ff7a7a;
+  font-weight: bold;
+  padding: 8px;
+  margin: 5px;
 }
 
-.form-text-imput {
+.form-text-input {
+  font-size: 1.4rem;
+  padding: 8px;
+  margin: 5px;
+  border: none;
+  background-color: #ff7a7a;
+  color: #fff;
+}
 
+::-webkit-input-placeholder {
+  color: #f4f4f4;
+}
+:-ms-input-placeholder {
+  color: #f4f4f4;
+}
+::-moz-placeholder {
+  color: #f4f4f4;
+  opacity: 1;
+}
+:-moz-placeholder {
+  color: #f4f4f4;
+  opacity: 1;
 }
 
 .btn-submit {
-
+  font-size: 1.4rem;
+  padding: 7px 25px;
+  margin: 5px;
+  border: 1px solid #ff7a7a;
+  background-color: #fff;
+  color: #ff7a7a;
 }
 
 .content-section {
   margin: 0 auto;
   padding: 20px;
+  color: #8f8989;
 }
 
 .content {
@@ -55,34 +87,36 @@ label {
 }
 
 .no-countries-answer {
-  color: red;
   font-size: 2rem;
+  color: #ff7a7a;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .country-container {
   max-width: 300px;
-}
-
-.country-name {
-
-}
-
-.country-capital {
-
-}
-
-.country-area {
-
-}
-
-.country-region {
-
+  border: 1px solid #ff7a7a;
+  text-align: center;
+  margin: 15px;
 }
 
 .country-flag {
-
+  padding: 0 10px;
 }
 
 .country-flag img {
   width: 100%;
+  max-height: 140px;
+  padding-bottom: 10px;
+}
+
+.country-container-label {
+  color: #ff7a7a;
+}
+
+@media screen and (max-width: 715px) {
+  .content {
+    align-items: center;
+    justify-content: center;
+  }
 }
